Changed padding - Changed padding to fix small bug on iPhone 6 display

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -62,7 +62,7 @@ page-home {
   }
   .grid .row .grid-column .service-select {
     border: 1px solid #e6e9ee;
-    padding: 0.75em;
+    padding: 1vh;
     text-align: center;
   }
   .service-button {
